# fishbot_control_system

./: .gitignore  CMakeLists.txt  README.md
backend/: bootstrap.cpp  bootstrap.h  main.cpp
backend/api/: AlertController.cpp  AlertController.h  ControlController.cpp  ControlController.h  HealthController.cpp  HealthController.h  MapController.cpp  MapController.h  PointController.cpp  PointController.h  ScheduleController.cpp  ScheduleController.h  SystemController.cpp  SystemController.h  TaskController.cpp  TaskController.h
backend/app/: AppContext.cpp  AppContext.h  AppServer.cpp  AppServer.h  Config.cpp  Config.h  Logger.cpp  Logger.h
backend/model/: EventLogRecord.h  ManualControlState.h  PointRecord.h  ScheduleRecord.h  SystemSnapshot.h  TaskRunRecord.h
backend/runtime/: StatusStreamService.cpp  StatusStreamService.h
backend/scheduler/: BatteryWatcher.cpp  BatteryWatcher.h  TaskScheduler.cpp  TaskScheduler.h
backend/services/: AlertService.cpp  AlertService.h  ManualControlService.cpp  ManualControlService.h  MapService.cpp  MapService.h  NativePointSync.h  PointService.cpp  PointService.h  ScheduleService.cpp  ScheduleService.h  SystemService.cpp  SystemService.h  TaskService.cpp  TaskService.h
backend/state_machine/: TaskState.h  TaskStateMachine.cpp  TaskStateMachine.h
backend/websocket/: StatusHub.cpp  StatusHub.h
config/: app.example.yaml
docs/architecture/: runtime-flows.md
docs/superpowers/plans/: 2026-04-13-fishbot-control-system-implementation.md  2026-04-14-manual-control-rearchitecture.md  2026-04-14-navigation-point-model-refactor.md  2026-04-15-self-developed-charge-return.md
docs/superpowers/specs/: 2026-04-13-fishbot-control-system-design.md  2026-04-14-current-pose-point-creation-design.md  2026-04-14-navigation-point-model-design.md
frontend/: index.html  map.html  system.html  tasks.html
frontend/assets/css/: base.css  dashboard.css
frontend/assets/js/: api.js  dashboard.js  manual-control.js  map-canvas.js  points.js  store.js  system.js  tasks.js  ws.js
manual_control_review_bundle/: README.md
manual_control_review_bundle/apk/: JoystickView.java  MapActivity.java  ServiceNames.java  SpiritTopicListener.java  TopicNames.java
manual_control_review_bundle/current/: ControlController.cpp  ManualControlService.cpp  ManualControlService.h  RosbridgeAdapter.cpp  RosbridgeAdapter.h  SystemService.cpp  api.js  dashboard.js  index.html
reverse_engineering/: README.md
reverse_engineering/app-release3.41_business_src/: README.md  package_counts.txt
reverse_engineering/app-release3.41_business_src/manifest/: AndroidManifest.decoded.xml
reverse_engineering/app-release3.41_business_src/ros_msgs/cartographer_ros_msgs/: StatusResponse.java  SubmapEntry.java  SubmapList.java  SubmapQueryRequest.java  SubmapQueryResponse.java
reverse_engineering/app-release3.41_business_src/ros_msgs/world_canvas_msgs18/: DiyPathEnty.java  SetCleanAreaEnty.java  SetRegionRequestEnty.java  SetShapeRequestEnty.java
reverse_engineering/decompiled_app-release3.41_selected/cartographer_ros_msgs/: SubmapTexture.java
reverse_engineering/decompiled_app-release3.41_selected/cartographer_ros_msgs/StatusResponse/: StatusResponse _init_ ()V.ag  StatusResponse getCode ()B.ag  StatusResponse getMessage ()String.ag  StatusResponse setCode (B)V.ag  StatusResponse setMessage (String)V.ag
reverse_engineering/decompiled_app-release3.41_selected/cartographer_ros_msgs/SubmapEntry/: SubmapEntry _init_ ()V.ag  SubmapEntry getPose ()Pose.ag  SubmapEntry getSubmapIndex ()I.ag  SubmapEntry getSubmapVersion ()I.ag  SubmapEntry getTrajectoryId ()I.ag  SubmapEntry isIsFrozen ()Z.ag  SubmapEntry setIsFrozen (Z)V.ag  SubmapEntry setPose (Pose)V.ag  SubmapEntry setSubmapIndex (I)V.ag  SubmapEntry setSubmapVersion (I)V.ag  SubmapEntry setTrajectoryId (I)V.ag
reverse_engineering/decompiled_app-release3.41_selected/com/boat/jrosbridge/: R.java  (+5 more)
ros_adapter/: IRobotAdapter.cpp  IRobotAdapter.h
ros_adapter/bridge_client/: IRosbridgeTransport.h  RosbridgeAdapter.cpp  RosbridgeAdapter.h  RosbridgeWebsocketTransport.cpp  RosbridgeWebsocketTransport.h
ros_adapter/model/: LaserScanSnapshot.h  MapDescriptor.h  MapSnapshot.h  Pose.h  RobotStatus.h
ros_adapter/native_ros/: NativeRosAdapter.cpp  NativeRosAdapter.h
scripts/: dev_run.sh  package.sh
storage/: Database.cpp  Database.h
storage/migrations/: 001_init.sql  002_add_point_robot_ids.sql  003_split_point_kind_and_role.sql
storage/repositories/: EventLogRepository.cpp  EventLogRepository.h  PointRepository.cpp  PointRepository.h  ScheduleRepository.cpp  ScheduleRepository.h  TaskRunRepository.cpp  TaskRunRepository.h
tests/frontend/: test_dashboard_current_point_buttons.js  test_dashboard_delete_points.js  test_dashboard_joystick.js  test_dashboard_outcharge_status.js  test_dashboard_structure.md  test_map_overlay.md  test_store_emit_stability.js
tests/integration/: test_app_context.cpp  test_bootstrap.cpp  test_end_to_end_fake_adapter.cpp
tests/integration/api/: test_alerts_api.cpp  test_charge_recovery.cpp  test_charge_return_relocalization.cpp  test_connection_diagnostics.cpp  test_current_pose_points_api.cpp  test_delete_points_api.cpp  test_health_endpoint.cpp  test_manual_control_api.cpp  test_manual_task_flow.cpp  test_map_workflow.cpp  test_points_api.cpp  test_schedule_trigger.cpp  test_self_charge_docking.cpp  test_status_websocket.cpp  test_system_status.cpp  test_system_status_trace.cpp
tests/integration/ros_adapter/: test_rosbridge_capability_probe.cpp  test_rosbridge_probe.cpp
tests/integration/runtime/: test_http_runtime_server.cpp  test_status_stream_service.cpp  test_status_websocket_runtime.cpp
tests/integration/storage/: test_migrations.cpp
tests/unit/app/: test_config.cpp
tests/unit/ros_adapter/: test_interface_contract.cpp  test_native_adapter.cpp  test_rosbridge_adapter.cpp  test_rosbridge_websocket_transport.cpp
tests/unit/scheduler/: test_battery_watcher.cpp
tests/unit/state_machine/: test_task_state_machine.cpp
tools/: rosbridge_capability_probe.cpp  rosbridge_probe.cpp
(+7488 files in other folders)
